syntax = "proto3";

package generated;

option go_package = "github.com/gamedb/gamedb/pkg/backend/generated";

import "shared.proto";
import "enums.proto";

service AppsService {
    rpc Search (SearchAppsRequest) returns (AppsElasticResponse) {
    }
    rpc Apps (ListAppsRequest) returns (AppsMongoResponse) {
    }
}

// Search
message SearchAppsRequest {
    PaginationRequest pagination = 1;
    repeated string types = 2;
    repeated int32 tags = 3;
    repeated int32 genres = 4;
    repeated int32 developers = 5;
    repeated int32 publishers = 6;
    repeated int32 categories = 7;
    repeated string platforms = 8;
    float priceMin = 9;
    float priceMax = 10;
    float scoreMin = 11;
    float scoreMax = 12;
    ProductCode currency = 13;
    string search = 14;
}

message AppsElasticResponse {
    PaginationResponse pagination = 1;
    repeated AppElasticResponse apps = 2;
}

message AppElasticResponse {
    int64 achievementsCounts = 1;
    float achievementsAvg = 2;
    map<string, string> achievementIcons = 3;
    repeated string aliases = 4;
    repeated int32 categories = 5;
    repeated int32 developers = 6;
    int64 followers = 7;
    repeated int32 genres = 8;
    string icon = 9;
    int32 id = 10;
    string name = 11;
    string nameMarked = 12;
    repeated string platforms = 13;
    int64 players = 14;
    map<string, Price> prices = 15;
    repeated int32 publishers = 16;
    int64 releaseDate = 17;
    float score = 18;
    float searchScore = 19;
    repeated int32 tags = 20;
    string type = 21;
    float trend = 22;
    float wishlistAvg = 23;
    int32 wishlistCount = 24;
}

// List
message ListAppsRequest {
    PaginationRequest pagination = 1;
    repeated int32 ids = 2;
    repeated int32 tags = 3;
    repeated int32 genres = 4;
    repeated int32 categories = 5;
    repeated int32 developers = 6;
    repeated int32 publishers = 7;
    repeated string platforms = 8;
}

message AppsMongoResponse {
    PaginationResponse pagination = 1;
    repeated AppMongoResponse apps = 2;
}

message AppMongoResponse {
    int32 id = 1;
    string name = 2;
    repeated int32 tags = 3;
    repeated int32 genres = 4;
    repeated int32 categories = 5;
    repeated int32 publishers = 6;
    repeated int32 developers = 7;
}
